<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetEdit">

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2E"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_pet_profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/nameTextE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/name_of_pet"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/textView3E"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pet_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"/>

        <RadioGroup
            android:id="@+id/typeRE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="166dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rbtnDogE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dog"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbtnCatE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:id="@+id/rbtnBirdE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bird"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:id="@+id/rbtnRabbitE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rabbit"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"/>

            <RadioButton
                android:id="@+id/rbtnOthersE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="-307dp"
                android:text="@string/others"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/breedTextE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/breed"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"/>

        <EditText
            android:id="@+id/wghtTextE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="textPersonName|numberDecimal"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/ageTextE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"/>


        <RelativeLayout
            android:layout_width="368dp"
            android:layout_height="442dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSaveE"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_alignBaseline="@+id/btnCancel"
                android:layout_alignBottom="@+id/btnCancel"
                android:layout_toLeftOf="@+id/btnCancel"
                android:layout_toStartOf="@+id/btnCancel"
                android:layout_marginTop="80dp"
                android:layout_alignParentEnd="true"
                android:text="@string/save"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/mybutton"
                />

            <Button
                android:id="@+id/btnCancelE"
                android:layout_width="160dp"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/mybutton"
                />
        </RelativeLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>