<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/white"
android:gravity="center"
android:orientation="vertical"
android:padding="16dp">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/my_pet_s_calendar"
    android:gravity="center"
    android:textAllCaps="true"
    android:textSize="16sp"
    android:padding="10dp"
    android:textStyle="bold"/>

    <Button
    android:id="@+id/sign_in_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:background="@color/colorPrimary"
    android:text="@string/sign_in"
    android:textColor="@color/white" />
    <!-- Link to Login Screen -->



<Button
    android:id="@+id/sign_up_button"
    style="?android:textAppearanceSmall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/colorPrimary"
    android:text="@string/sign_up"
    android:textColor="@color/white"
    android:textStyle="bold" />


    <!-- Link to Forget Password -->


<TextView
    android:id="@+id/forget_password_button"
    style="?android:textAppearanceSmall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/forget_password"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold" />
</LinearLayout>