<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_pet_s_calendar2"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="90dp"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnProfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnProfiles"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>


        <Button
            android:id="@+id/btnReminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnReminders"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
