<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reminder2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textSReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextSReminder"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="368dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textSDate"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textSReminder"
                android:layout_alignStart="@id/btnSDate"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="168dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="200dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/btnSDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/textSReminder"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="200dp"
                android:background="@drawable/mybutton"
                android:text="@string/dateR"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@id/btnSDate"
                app:layout_constraintStart_toStartOf="@id/btnSTime"
                app:layout_constraintTop_toTopOf="@id/btnSTime"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/textSTime"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textSDate"
                android:layout_alignStart="@id/btnSTime"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="168dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="200dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="time" />

            <Button
                android:id="@+id/btnSTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/btnSDate"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="-54dp"
                android:background="@drawable/mybutton"
                android:text="@string/timeR"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/btnSDate"
                app:layout_constraintEnd_toEndOf="@id/btnSDate"
                app:layout_constraintStart_toStartOf="@id/btnSPet"
                app:layout_constraintTop_toTopOf="@id/btnSPet" />

            <TextView
                android:id="@+id/textSPet"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/textSTime"
                android:layout_alignStart="@id/btnSPet"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="168dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="30dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/btnSPet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/btnSTime"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="-58dp"
                android:background="@drawable/mybutton"
                android:text="@string/petR"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/btnSTime"
                app:layout_constraintEnd_toEndOf="@id/btnSTime" />

            <EditText
                android:id="@+id/textNote"
                android:layout_width="362dp"
                android:layout_height="127dp"
                android:layout_above="@+id/repeatCheckBox"
                android:layout_below="@+id/btnSPet"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="7dp"
                android:ems="10"
                android:hint="@string/add_notes"
                android:inputType="textMultiLine" />

            <CheckBox
                android:id="@+id/repeatCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="250dp"
                android:layout_marginBottom="40dp"
                android:text="@string/repeat_daily"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="invisible"
                />

            <EditText
                android:id="@+id/estimatedTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/repeatCheckBox"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="12dp"
                android:inputType="datetime"
                android:hint="@string/estimated_time_in_min"
                android:visibility="invisible" />


        </RelativeLayout>

        <Button
            android:id="@+id/btnSsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/mybutton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/saveR2"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>